kubernetes/minio/istio-virtualservice.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - ${MINIO_HOSTNAME}
  http:
    - route:
        - destination:
            host: minio
            port:
              number: 9001
      headers:
        request:
          set:
            x-forwarded-proto: https
